@@ -33,7 +33,9 @@ libweather_home_la_SOURCES = weather-home.c \
 			     weather-home_prefernce.h \
 			     weather-home_common.h \
 			     weather-event.c \
-			     weather-event.h
+			     weather-event.h \
+			     weather-window_popup.c \
+			     weather-window_popup.h
 
 libweather_home_la_CFLAGS = $(GTK_CFLAGS) $(OSSO_CFLAGS) $(LIBXML2_CFLAGS) $(GNOME_VFS_CFLAGS) $(GCONF_CFLAGS) -Ilib
 libweather_home_la_LDFLAGS = -module -avoid-version 
