@@ -1,5 +1,7 @@
 0.13
   * Add multistations
+  * On/Off transparency mode on main icon
+  * Medium mode for view main icon
 0.12 
   * Simple decor window popup
   * Automatical try connect to Internet
